--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--==================== CSS ====================-->
     <link rel="stylesheet" href="assets/css/polo.css">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <title>Juliana Keller</title>
+    <title>Matheus Oliveira</title>
 </head>
 <body>
 <meta http-equiv="refresh" content="1;url=http://matheusoliveira.netlify.app/" />
